@@ -1707,8 +1707,6 @@ void bx_init_options()
 #endif
 #if BX_SUPPORT_PCI
   new bx_param_bool_c(menu, "pci_ide", "Enable 'pci_ide'", "", 1);
-#endif
-#if BX_SUPPORT_ACPI
   new bx_param_bool_c(menu, "acpi", "Enable 'acpi'", "", 1);
 #endif
 #if BX_SUPPORT_APIC
