@@ -26,6 +26,9 @@ Bochs repository moved to the SVN version control !
     The VBE support is always automatically compiled in, in order to enable
     VBE support the bochsrc option "vga: extension=" has to be set to "vbe". If
     PCI is present, the "pcivga" device can be assigned to PCI slot.
+  - Configure option --enable-acpi is deprecated and should not be used anymore.
+    The ACPI support is always automatically compiled in if PCI is compiled in.
+    The ACPI still could be disabled using .bochsrc 'plugin_ctrl' option.
 
 - I/O Devices
   - Networking
